tests/fixtures/invalid/var_meta_invalid_char.wks
# Test meta-variable name contains ')' after resolution
:var "bad" "foo)"
:var "%(bad)" "value"
x "Test" +write %{{echo test}}
